Fix a bug at creation

--- a/backoffice_operateurs/templates/forms/ads.html
+++ b/backoffice_operateurs/templates/forms/ads.html
@@ -13,7 +13,7 @@
 {{super()}}
 <script src="{{url_for('static', filename='bootstrap3-typeahead.min.js')}}"></script>
 <script>
-$('#zupc').typeahead(
+$('#zupc_autocomplete').typeahead(
 {
 items: 4,
 source: function (query, process) {
@@ -23,7 +23,18 @@ source: function (query, process) {
             function (data) {
                 return process(data.suggestions);
             });
+},
+displayKey: 'name',
+});
+
+$('#zupc_autocomplete').change(function() {
+    var current = $('#zupc_autocomplete').typeahead("getActive");
+    if (current) {
+        if (current.name.toLowerCase() == $('#zupc_autocomplete').val().toLowerCase()) {
+            $('#ZUPC_id').val(current.id);
+        }
     }
 });
+
 </script>
 {% endblock %}
