Refactorize ADS forms

--- a/backoffice_operateurs/templates/base.html
+++ b/backoffice_operateurs/templates/base.html
@@ -9,7 +9,7 @@
     }
 </style>
 {% set navigation_bar = [
-    ('/ads/', 'ads', 'ADS'),
+    ('/ads', 'ads', 'ADS'),
     ('/conducteurs/', 'conducteurs', 'Conducteurs'),
     ('/zupc/', 'zupc', 'ZUPC')
 ] -%}
