--- a/backoffice_operateurs/templates/base.html
+++ b/backoffice_operateurs/templates/base.html
@@ -10,8 +10,8 @@
 </style>
 {% set navigation_bar = [
     ('/ads', 'ads', 'ADS'),
-    ('/conducteurs/', 'conducteurs', 'Conducteurs'),
-    ('/zupc/', 'zupc', 'ZUPC')
+    ('/conducteurs', 'conducteurs', 'Conducteurs'),
+    ('/zupc', 'zupc', 'ZUPC')
 ] -%}
 {% set active_page = active_page|default('index') -%}
 
