add an empty home view

--- a/backoffice_operateurs/templates/base.html
+++ b/backoffice_operateurs/templates/base.html
@@ -1,6 +1,6 @@
 {% extends "bootstrap/base.html" %}
 
-{% block title %} CRUD Taxis {% endblock %}
+{% block title %} Registre des Taxis {% endblock %}
 {% block navbar %}
 <style>
 
@@ -30,7 +30,7 @@
         {% endfor %}
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Compte</a></li>
+        <li><a href="/logout">Déconnexion</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
