--- a/backoffice_operateurs/templates/forms/conducteur.html
+++ b/backoffice_operateurs/templates/forms/conducteur.html
@@ -3,6 +3,7 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block content %}
+{{super()}}
 <div id="content">
   {{ wtf.quick_form(form) }}
 </div>
