--- a/backoffice_operateurs/templates/lists/zupc.html
+++ b/backoffice_operateurs/templates/lists/zupc.html
@@ -13,8 +13,8 @@
     <tr>
         <td> {{ zupc.departement }} </td>
         <td> {{ zupc.nom }} </td>
-        <td> <a href="/zupc/form?id={{ zupc.id }}">Modifier</a> </td>
-        <td> <a href="/zupc/delete?id={{ zupc.id }}">Supprimer</a> </td>
+        <td> <a href="{{url_for('zupc.zupc_form')}}?id={{ zupc.id }}">Modifier</a> </td>
+        <td> <a href="{{url_for('zupc.zupc_delete')}}?id={{ zupc.id }}">Supprimer</a> </td>
 {% endfor %}
 </table>
 {{ render_pagination(zupc_list) }}
