--- a/APITaxi/templates/base.html
+++ b/APITaxi/templates/base.html
@@ -10,7 +10,7 @@
 </style>
 {% set navigation_bar = [
     ('/ads', 'ads', 'ADS'),
-    ('/conducteurs', 'conducteurs', 'Conducteurs'),
+    ('/drivers', 'drivers', 'Conducteurs'),
     ('/zupc', 'zupc', 'ZUPC')
 ] -%}
 {% set active_page = active_page|default('index') -%}
