--- a/APITaxi/templates/forms/driver.html
+++ b/APITaxi/templates/forms/driver.html
@@ -1,4 +1,4 @@
-{% set active_page = "conducteurs" %}
+{% set active_page = "drivers" %}
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
