Add page to see the key

--- a/APITaxi/templates/base.html
+++ b/APITaxi/templates/base.html
@@ -30,6 +30,7 @@
         {% endfor %}
       </ul>
       <ul class="nav navbar-nav navbar-right">
+        <li><a href="/user_key">Clé</a></li>
         <li><a href="/logout">Déconnexion</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
