--- a/APITaxi/templates/swagger/index.html
+++ b/APITaxi/templates/swagger/index.html
@@ -25,6 +25,7 @@
       var url = "{{ url_for('specs', _external=True) }}";
       window.swaggerUi = new SwaggerUi({
         url: url,
+        validatorUrl: null,
         dom_id: "swagger-ui-container",
         supportedSubmitMethods: ['get', 'post', 'put', 'delete', 'patch'],
         onComplete: function(swaggerApi, swaggerUi){
