--- a/APITaxi/templates/swagger/index.html
+++ b/APITaxi/templates/swagger/index.html
@@ -22,7 +22,7 @@
 
   <script type="text/javascript">
     $(function () {
-      var url = "{{ url_for('specs', _external=True) }}";
+      var url = "{{ url_for('api.specs', _external=True) }}";
       window.swaggerUi = new SwaggerUi({
         url: url,
         validatorUrl: null,
