--- a/APITaxi/templates/documentation/base.html
+++ b/APITaxi/templates/documentation/base.html
@@ -16,41 +16,60 @@ margin-bottom: 0;
      <div id="sidebar-wrapper">
                 <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href=#">Vue d'ensemble</a>
+                    <a href="index">Vue d'ensemble</a>
                 </li>
                 <ul>
                 <li>
-                    <a href="#">Entêtes HTTP obligatoires</a>
+                    <a href="index#headers">Entêtes HTTP obligatoires</a>
                 </li>
                 <li>
-                    <a href="#">Authentification</a>
+                    <a href="index#authentication">Authentification</a>
                 </li>
                 </ul>
                 <li class="sidebar-brand">
-                    <a href="#">Moteur</a>
+                    <a href="moteur">Moteur</a>
                 </li>
                 <ul>
                 <li>
-                    <a href="#">Créer un hail</a>
+                    <a href="moteur#geoloc">Géolocalisation des taxis</a>
                 </li>
                 <li>
-                    <a href="#">Suivi du statut d'un hail</a>
+                    <a href="moteur#post_hail">Créer un hail</a>
                 </li>
                 <li>
-                    <a href="#">Confirmer Hail</a>
+                    <a href="moteur#get_hail">Suivi du statut d'un hail</a>
+                </li>
+                <li>
+                    <a href="moteur#put_hail">Mise à jour d'un Hail</a>
                 </li>
                 </ul>
                 <li class="sidebar-brand">
-                    <a href=#">Opérateur</a>
+                    <a href="operateur">Opérateur</a>
                 </li>
                 <ul>
                 <li>
-                    <a href="#">Réception d'un hail</a>
-                <li>
-                    <a href="#">Mise à jour du statut d'un hail</a>
+                    <a href="operateur#post_taxi">Déclarer un taxi</a>
                 </li>
                 <li>
-                    <a href="#">Suivi du statut d'un hail</a>
+                    <a href="operateur#get_taxi">GET taxi</a>
+                </li>
+                <li>
+                    <a href="operateur#udp_taxi">Positionner un taxi</a>
+                </li>
+                <li>
+                    <a href="operateur#post_vehicle">Déclarer un véhicule</a>
+                </li>
+                <li>
+                    <a href="operateur#post_drivef">Déclarer un chauffeur</a>
+                </li>
+                <li>
+                    <a href="operateur#post_ads">Déclarer une ADS</a>
+                </li>
+                <li>
+                    <a href="operateur#get_hail">Suivi du statut d'un hail</a>
+                </li>
+                <li>
+                    <a href="operateur#put_hail">Mise à jour d'un Hail</a>
                 </li>
                 </ul>
             </ul>
