--- a/APITaxi/templates/documentation/index.html
+++ b/APITaxi/templates/documentation/index.html
@@ -12,7 +12,7 @@ Toutes les API présententées ici, à l'exception de celle permettant la remont
 Elles doivent être appellées à travers le protocol standard HTTPS.<br>
 Tous les retours sont encodés en <a href="http://www.json.org">JSON</a>.<br>
 
-<h2>Entêtes HTTP obligatoires</h2>
+<a name="headers"><h2>Entêtes HTTP obligatoires</h2></a>
 
 Afin de faire les appels vous devez remplir les entêtes https suivantes:
 <table class="table-desc">
@@ -41,7 +41,7 @@ Afin de faire les appels vous devez remplir les entêtes https suivantes:
     </tr>
 </table>
 
-<h2>Authentification</h2>
+<a name="authentication"><h2>Authentification</h2></a>
 L'authentification lors des appels se fait grâce à l'ajout de l'entête X-API-KEY, elle peut être récupéree <a href="user_key">ici</a>
 
 {% endblock %}
