Add documentation onglet

--- a/APITaxi/templates/base.html
+++ b/APITaxi/templates/base.html
@@ -15,6 +15,7 @@
 ] -%}
 {% set user_bar = [
     ('/user_key', 'user_key', 'Clé'),
+    ('/documentation', 'documentation', 'Documentation'),
     ('/user/form', 'user_form', 'Mon compte'),
     ('/logout', 'logout', 'Déconnexion')
 ] -%}
