revue de documentation

--- a/APITaxi/templates/documentation/base.html
+++ b/APITaxi/templates/documentation/base.html
@@ -31,16 +31,16 @@ margin-bottom: 0;
                 </li>
                 <ul>
                 <li>
-                    <a href="moteur#geoloc">Géolocalisation des taxis</a>
+                    <a href="moteur#geoloc">Rechercher des taxis</a>
                 </li>
                 <li>
-                    <a href="moteur#post_hail">Créer un hail</a>
+                    <a href="moteur#post_hail">Créer une course</a>
                 </li>
                 <li>
-                    <a href="moteur#get_hail">Suivi du statut d'un hail</a>
+                    <a href="moteur#get_hail">Suivre le statut d'une course</a>
                 </li>
                 <li>
-                    <a href="moteur#put_hail">Mise à jour d'un Hail</a>
+                    <a href="moteur#put_hail">Mettre à jour une course</a>
                 </li>
                 </ul>
                 <li class="sidebar-brand">
@@ -48,28 +48,34 @@ margin-bottom: 0;
                 </li>
                 <ul>
                 <li>
-                    <a href="operateur#post_taxi">Déclarer un taxi</a>
+                    <a href="operateur#post_vehicle">Déclarer un véhicule</a>
                 </li>
                 <li>
-                    <a href="operateur#get_taxi">GET taxi</a>
+                    <a href="operateur#post_driver">Déclarer un chauffeur</a>
+                </li>
+                <li>
+                    <a href="operateur#post_ads">Déclarer une ADS</a>
+                </li>                
+		<li>
+                    <a href="operateur#post_taxi">Déclarer un taxi</a>
                 </li>
                 <li>
                     <a href="operateur#udp_taxi">Positionner un taxi</a>
                 </li>
                 <li>
-                    <a href="operateur#post_vehicle">Déclarer un véhicule</a>
+                    <a href="operateur#put_taxi">Mettre à jour un taxi</a>
                 </li>
                 <li>
-                    <a href="operateur#post_drivef">Déclarer un chauffeur</a>
+                    <a href="operateur#get_taxi">Vérifier l'état d'un taxi</a>
                 </li>
                 <li>
-                    <a href="operateur#post_ads">Déclarer une ADS</a>
+                    <a href="operateur#udp_taxi">Recevoir une course</a>
                 </li>
                 <li>
-                    <a href="operateur#get_hail">Suivi du statut d'un hail</a>
+                    <a href="operateur#get_hail">Suivre le statut d'une course</a>
                 </li>
                 <li>
-                    <a href="operateur#put_hail">Mise à jour d'un Hail</a>
+                    <a href="operateur#put_hail">Mettre à jour une course</a>
                 </li>
                 </ul>
             </ul>
