--- a/APITaxi/templates/documentation/reference.html
+++ b/APITaxi/templates/documentation/reference.html
@@ -248,4 +248,8 @@ This section describes the different values a hail status can take.
         <td></td>
     </tr>
 </table>
+<br>
+<img src="/static/images/enums_hails.png">
+
+
 {% endblock %}
