--- a/APITaxi/templates/documentation/moteur.html
+++ b/APITaxi/templates/documentation/moteur.html
@@ -1,28 +1,27 @@
 {% extends "documentation/base.html" %}
 {% block documentationcontent %}
 <h1>Moteur</h1>
-Il y a deux interactions principales entre un moteur de recherche et l'ODT : la géolocalisation des taxis disponibles autour d'un utilisateur, et le hèle d'un taxi par un client.<br>
-<b>Rappel :</b> toutes les actions doivent être déclenchées après une interaction entre le client et son terminal, elles ne doivent pas être faites de manière automatique.
+Il y a deux interactions principales entre un moteur de recherche et le Registre Géolocalisé des Taxis (RGT) : rechercher des taxis disponibles autour d'un client, et héler un taxi pour un client.<br>
+<b>Important :</b> conformément à la Charte, il n'est possible de rechercher ou héler un taxi <em>que</em> dans le cadre d'une demande interactive d'un vrai client : toute tentative d'automatisation est proscrite.
 
-<a name="geoloc"></a><h2>Géolocalisation des taxis</h2>
-Afin d'obtenir la liste des taxis autour d'un point on effectue un appel HTTP <span>GET</span> à l'api <a href="https://api.opendatataxi.fr/doc/#!/taxis/get_taxis">taxis</a>.
-Cette API renvoie les taxis actifs autour d'un point. Pour chaque taxi, dans le cas nominal, l'opérateur de l'app ayant envoyé en dernier la géolocalisation du taxi est renvoyé.
-<h4>Fonctionnement du paramètre favorite_operator</h4>
-Ce paramètre permet de spécifier un opérateur préféré. Si l'app de cet opérateur a renvoyé pour ce taxi avant le timeout.
+<a name="geoloc"></a><h2>Recherche de taxis</h2>
+Afin d'obtenir la liste des taxis autour d'un client, il faut effectuer un appel HTTPS <a href="https://api.opendatataxi.fr/doc/#!/taxis/get_taxis"><span>GET</span> sur l'api <em>taxis</em></a>.<br>
+Cette API retourne les taxis disponibles aux alentours immédiats du client situé à la position <span>(lon,lat)</span>, avec toutes leurs caractéristiques. Seuls les taxis pouvant prendre en charge ce client sont retournés, en tenant compte de leur zone de rattachement.
 
-<a name"post_hail"></a><h2>Créer un hail</h2>
-Après avoir récupéré la liste des taxis, il est possible d'héler un taxi. Pour cela, il faut effectuer un appel HTTP avec le verbe <span>POST</span>. L'objet JSON <a href="reference#hail_object">hail</a> a créer doit être présent dans la partie data de la requête.<br>
-Le statut du hail doit être <span>emitted</span> à la creation du hail.
-Si la requête s'est bien passé la réponse contiendra le hail nouvellement créé.
+<h4>Choix d'un opérateur préféré</h4>
+Le paramètre <span>favorite_operator</span> permet de spécifier un opérateur préféré. Il permet, pour les taxis ayant recours à plusieurs opérateurs, de privilégier les caractéristiques et la position remontées par l'opérateur spécifié. Si aucune position récente de l'opérateur favori n'est disponible, ou si aucun opérateur favori n'est spécifié, les caractéristiques et la position renvoyées seront celles de l'opérateur ayant positionné le taxi le plus récemment.
 
-<a name="get_hail"></a><h2>Suivi du statut d'un hail</h2>
-L'évolution du statut du hail se fait en effectuant un appel HTTP avec le verbe <span>GET</span> à l'API <a href="https://api.opendatataxi.fr/doc/#!/hails/get_hail_id">hail</a>.
-L'id du hail se trouve dans la réponse de la requête de création de hail.
+<a name"post_hail"></a><h2>Créer une course</h2>
+Après avoir récupéré la liste des taxis disponibles aux alentours immédiats du client, il est possible de héler un de ces taxi. Pour cela, il fauti créer une course en effectuant un appel HTTPS <a href="https://api.opendatataxi.fr/doc/#!/hails/post"><span>POST</span> sur l'api <em>hails</em></a>.
+L'objet JSON <a href="reference#hail_object"><span>hail</span></a> à créer doit être présent dans la partie data de la requête.<br>
+Le statut de la course doit être <span>emitted</span> lors de sa creation.<br>
+En cas de succès, le retour contient l'objet JSON <a href="reference#hail_object"><span>hail</span></a> nouvellement créé.
 
-Différents status possibles, et recommandations liées.
+<a name="get_hail"></a><h2>Suivre le statut d'une course</h2>
+Le suivi de l'évolution du statut de la course se fait en effectuant un appel HTTPS <a href="https://api.opendatataxi.fr/doc/#!/hails/get_hail_id"><span>GET</span> sur l'api <em>hails</em></a>. L'identifiant de l'objet <a href="https://api.opendatataxi.fr/doc/#!/hails/post"><span>POST</span> sur l'api <em>hails</em></a> se trouve dans la réponse de la requête de création de cet objet (voir <a href="#post_hail">Créer une course</a>).
 
-<a name="put_hail"></a><h2>Confirmation d'un hail</h2>
-Afin de finaliser le hail le client doit reconfirmer sa présence au taxi, lorsque le statut du hail est <span>accepted_by_taxi</span>. Pour cela il faut effectuer un appel HTTP avec le verbe <span>PUT</span> à l'API <a href="https://api.opendatataxi.fr/doc/#!/hails/put_hail_id">hail</a>.
-Le nouveau statut à envoyer par le statut afin la fin du timeout doit être en cas de reconfirmation par le client <span>accepted_by_client</span> ou bien en cas de refus <span>declined_by_taxi</span>.
+<a name="put_hail"></a><h2>Mettre à jour une course</h2>
+Afin de finaliser la mise en relation, le client doit reconfirmer la course après qu'elle a été acceptée par le taxi. Pour cela il faut, lorsque le statut de la course est <span>accepted_by_taxi</span> et avant un délai de 30s, effectuer un appel HTTPS <a href="https://api.opendatataxi.fr/doc/#!/hails/put_hail_id"><span>PUT</span> sur l'api <em>hails</em></a>. 
+Le nouveau statut à envoyer doit être en cas de confirmation de la course par le client <span>accepted_by_client</span> ou bien en cas d'abandon de la mise en relation <span>declined_by_client</span>.
 
 {% endblock %}
