--- a/APITaxi/templates/documentation/base.html
+++ b/APITaxi/templates/documentation/base.html
@@ -16,14 +16,14 @@ margin-bottom: 0;
      <div id="sidebar-wrapper">
                 <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="documentation/index">Vue d'ensemble</a>
+                    <a href="/documentation/index">Vue d'ensemble</a>
                 </li>
                 <ul>
                 <li>
-                    <a href="documentation/index#headers">Entêtes HTTP obligatoires</a>
+                    <a href="/documentation/index#headers">Entêtes HTTP obligatoires</a>
                 </li>
                 <li>
-                    <a href="documentation/index#authentication">Authentification</a>
+                    <a href="/documentation/index#authentication">Authentification</a>
                 </li>
                 </ul>
                 <li class="sidebar-brand">
@@ -31,51 +31,51 @@ margin-bottom: 0;
                 </li>
                 <ul>
                 <li>
-                    <a href="documentation/moteur#geoloc">Rechercher des taxis</a>
+                    <a href="/documentation/moteur#geoloc">Rechercher des taxis</a>
                 </li>
                 <li>
-                    <a href="documentation/moteur#post_hail">Créer une course</a>
+                    <a href="/documentation/moteur#post_hail">Créer une course</a>
                 </li>
                 <li>
-                    <a href="documentation/moteur#get_hail">Suivre le statut d'une course</a>
+                    <a href="/documentation/moteur#get_hail">Suivre le statut d'une course</a>
                 </li>
                 <li>
-                    <a href="documentation/moteur#put_hail">Mettre à jour une course</a>
+                    <a href="/documentation/moteur#put_hail">Mettre à jour une course</a>
                 </li>
                 </ul>
                 <li class="sidebar-brand">
-                    <a href="documentation/operateur">Opérateur</a>
+                    <a href="/documentation/operateur">Opérateur</a>
                 </li>
                 <ul>
                 <li>
-                    <a href="documentation/operateur#post_vehicle">Déclarer un véhicule</a>
+                    <a href="/documentation/operateur#post_vehicle">Déclarer un véhicule</a>
                 </li>
                 <li>
-                    <a href="documentation/operateur#post_driver">Déclarer un chauffeur</a>
+                    <a href="/documentation/operateur#post_driver">Déclarer un chauffeur</a>
                 </li>
                 <li>
-                    <a href="documentation/operateur#post_ads">Déclarer une ADS</a>
+                    <a href="/documentation/operateur#post_ads">Déclarer une ADS</a>
                 </li>
                 <li>
-                    <a href="documentation/operateur#post_taxi">Déclarer un taxi</a>
+                    <a href="/documentation/operateur#post_taxi">Déclarer un taxi</a>
                 </li>
                 <li>
-                    <a href="documentation/operateur#udp_taxi">Positionner un taxi</a>
+                    <a href="/documentation/operateur#udp_taxi">Positionner un taxi</a>
                 </li>
                 <li>
-                    <a href="documentation/operateur#put_taxi">Mettre à jour un taxi</a>
+                    <a href="/documentation/operateur#put_taxi">Mettre à jour un taxi</a>
                 </li>
                 <li>
-                    <a href="documentation/operateur#get_taxi">Vérifier l'état d'un taxi</a>
+                    <a href="/documentation/operateur#get_taxi">Vérifier l'état d'un taxi</a>
                 </li>
                 <li>
-                    <a href="documentation/operateur#udp_taxi">Recevoir une course</a>
+                    <a href="/documentation/operateur#udp_taxi">Recevoir une course</a>
                 </li>
                 <li>
-                    <a href="documentation/operateur#get_hail">Suivre le statut d'une course</a>
+                    <a href="/documentation/operateur#get_hail">Suivre le statut d'une course</a>
                 </li>
                 <li>
-                    <a href="documentation/operateur#put_hail">Mettre à jour une course</a>
+                    <a href="/documentation/operateur#put_hail">Mettre à jour une course</a>
                 </li>
                 </ul>
             </ul>
