--- a/APITaxi/templates/documentation/operateur.html
+++ b/APITaxi/templates/documentation/operateur.html
@@ -10,20 +10,20 @@ de les transmettre au taxi, et <a href="#update_hail">les mettre à jour</a> dan
 
 <a name="post_vehicle"><h2>Déclarer un véhicule</h2></a>
     La déclaration d'un véhicule se fait en effetuant une requête HTTPS <span>POST</span> à l'API <a href="https://api.opendatataxi.fr/doc/#!/administrative/post_vehicle">vehicles</a>.
-    La structure de l'objet <span>vehicle</span> atttendu est détaillée dans la <a href="reference#vehicle_object">documentation de référence.</a>
+    La structure de l'objet <span>vehicle</span> atttendu est détaillée dans la <a href="/documentation/reference#vehicle_object">documentation de référence.</a>
 <a name="post_ads"><h2>Déclarer une ADS</h2></a>
     La déclaration d'une Autorisaton De Stationner se fait en effetuant une requête HTTPS <span>POST</span> à l'API <a href="https://api.opendatataxi.fr/doc/#!/administrative/post_ads">ads</a>.
-    La structure de l'objet <span>ads</span> atttendu est détaillée dans la <a href="reference#ads_object">documentation de référence.</a>
+    La structure de l'objet <span>ads</span> atttendu est détaillée dans la <a href="/documentation/reference#ads_object">documentation de référence.</a>
 <a name="post_driver"><h2>Déclarer un chauffeur</h2></a>
     La déclaration d'un chauffeur se fait en effetuant une requête HTTPS <span>POST</span> à l'API <a href="https://api.opendatataxi.fr/doc/#!/administrative/post_drivers">drivers</a>.
-    La structure de l'objet <span>driver</span> atttendu est détaillée dans la <a href="reference#driver_object">documentation de référence.</a>
+    La structure de l'objet <span>driver</span> atttendu est détaillée dans la <a href="/documentation/reference#driver_object">documentation de référence.</a>
 
 <a name="post_taxi"><h2>Déclarer un taxi</h2></a>
 
     Un taxi est déclaré en effectuant un appel HTTPS <span>POST</span> à l'api <a href="https://api.opendatataxi.fr/doc/#!/taxis/post_taxis">taxis</a>.
-    Les différents statuts possibles du taxi sont décrits <a href="reference#taxi_status">ici</a>. Il doit correspondre au statut réel du taxi.
+    Les différents statuts possibles du taxi sont décrits <a href="/documentation/reference#taxi_status">ici</a>. Il doit correspondre au statut réel du taxi.
     <br>
-    En cas de succès l'API retourne l'objet taxi créé. Les autres réponses sont décrites dans la <a href="reference#taxi_post_responses">documentation de référence</a>.
+    En cas de succès l'API retourne l'objet taxi créé. Les autres réponses sont décrites dans la <a href="/documentation/reference#taxi_post_responses">documentation de référence</a>.
 
 <a name="get_taxi"><h2>Vérifier l'état d'un taxi</h2></a>
     L'heure de la dernière réception de la position d'un taxi par le RGT est disponible en effectuant un appel HTTPS <span>GET</span> à l'api <a href="https://api.opendatataxi.fr/doc/#!/taxis/get_taxi_id">taxis</a>.
@@ -38,13 +38,13 @@ L'id du taxi est l'id qui a été renvoyé lors de la déclaration du taxi (voir
 
 <a name="get_hail"><h2>Réceptionner une course</h2></a>
 Afin de recevoir les courses, les opérateurs doivent mettre à disposition un point d'entrée sur leurs serveurs.<br>
-Ce point d'entrée doit pouvoir recevoir des appels HTTPS <span>POST</span>. L'objet JSON <span>hail</span> qui sera transmis sur ce point d'entrée est détaillé  dans la <a href="reference#hail_object">documentation de référence</a>.
+Ce point d'entrée doit pouvoir recevoir des appels HTTPS <span>POST</span>. L'objet JSON <span>hail</span> qui sera transmis sur ce point d'entrée est détaillé  dans la <a href="/documentation/reference#hail_object">documentation de référence</a>.
 À la suite de la réception d'une demande de mise en relation, l'opérateur doit être capable de transmettre cette demande au taxi désigné.
 
 <a name="#update_hail"><h2>Mettre à jour une course</h2></a>
 Une fois transmise au taxi la demande de mise en relation, sont statut doit etre mis à jour dans le RGT au moyen d'appels HTTPS en <a href="https://api.opendatataxi.fr/doc/#!/hails/put_hail_id"><span>PUT</span> à l'API hails</a>.
 <br>
-Les statuts possibles sont détaillés dans la <a href="reference#hail_status">documentation de référence</a>.<br>a
+Les statuts possibles sont détaillés dans la <a href="/documentation/reference#hail_status">documentation de référence</a>.<br>a
 
 <a name="get_hail"><h2>Suivre le statut d'une course</h2></a>
 Le statut de la course peut également être mis à jour dans le RGT par le moteur de recherche. L'opérateur peut donc suivre son statut au moyen d'appels HTTPS en <a href="https://api.opendatataxi.fr/doc/#!/hails/get_hail_id"><span>GET</span> à l'API hails</a>.
