Lien vers la documentation de référence

--- a/APITaxi/templates/documentation/base.html
+++ b/APITaxi/templates/documentation/base.html
@@ -78,6 +78,9 @@ margin-bottom: 0;
                     <a href="/documentation/operateur#put_hail">Mettre à jour une course</a>
                 </li>
                 </ul>
+                <li>
+                    <a href="/documentation/reference">Réference</a>
+                </li>
             </ul>
         </div>
 <div id="page-content-wrapper">
